--- a/index.html
+++ b/index.html
@@ -159,8 +159,14 @@
       <section class="sc-2">
         <div class="sc-2sd container">
           <div class="sd-1 container d-flex justify-content-center">
-            <h1 class="tx text-center fs-2 p-2 fw-bolder">ওমেন কল সেন্টার এজেন্ট</h1>
-            <a href="#" class="text-decoration-none fw-bold text-warning text-center d-flex align-items-center">নিবন্ধন করুন</a>
+            <h1 class="tx text-center fs-2 p-2 fw-bolder fs-1">ওমেন কল সেন্টার এজেন্ট</h1>
+            <a href="#" class="text-decoration-none fw-bold text-warning text-center d-flex align-items-center rounded-pill">নিবন্ধন করুন</a>
+          </div>
+          <div class="sd-2">
+            <img src="Images/section-call-center.png" class="h-85 mt-3 rounded" alt="call-center png">
+            <div class="dr-sec">
+              
+            </div>
           </div>
         </div>
       </section>
