--- a/index.html
+++ b/index.html
@@ -579,6 +579,62 @@
         </div>
       </section>
       <!-- sixth section end -->
+      <!-- H Details section start -->
+      <section class="sc-2">
+        <div class="sc-2sd container xxs">
+          <div class="bb">
+            <div class="sd-1 container d-flex justify-content-center">
+              <h1 class="tx text-center fs-2 p-2 fw-bolder fs-1">হার পাওয়ার প্রকল্প </h1>
+            </div>
+            <div class="ltbanner container d-flex justify-content-center">
+              <img src="Images/top-banner.png" class=" rounded-3" alt="">
+            </div>
+            <div class="accordion acc container mt-3" id="accordionExample">
+              <div class="accordion-item allbt">
+                <h2 class="accordion-header">
+                  <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    উদ্দেশ্য
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    তথ্য-প্রযুক্তির সর্বোত্তম নিরাপদ ব্যবহার করে দক্ষতা বৃদ্ধির মাধ্যমে নারীদের আত্মকর্মসংস্থানের ব্যবস্থা ও উদ্যোক্তা হিসাবে তাদের টেকসই ক্ষমতায়ন নিশ্চিত করা। 
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item allbt">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    লক্ষ্যমাত্রা
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    ক) ৪৩টি জেলার সদর উপজেলাসহ মোট ৩টি উপজেলা ও রংপুর জেলার পীরগঞ্জ উপজেলাসহ মোট ১৩০ টি উপজেলায় তথ্য প্রযুক্তিতে নারীদের সক্ষমতা বৃদ্ধিতে চারটি ক্যাটাগরিতে মোট ২৫,১২৫ জন নারীকে ০৫ (পাঁচ) মাসব্যাপী প্রশিক্ষণ প্রদান। IT Service Provider হিসেবে ১০,৪০০ জন Women Freelancer হিসেবে ১০,৪০০ জন Women Call Centre Agent হিসেবে ১,০৭৫ জন Women E-commerce Professional হিসেবে ৩,২৫০ জন<br>
+                    খ) প্রশিক্ষণ শেষে উত্তীর্ণ প্রশিক্ষণার্থীদের নিয়ে ০১ (এক) মাসব্যাপী মেন্টরশীপ প্রোগ্রাম আয়োজন।<br>
+                    গ)তথ্যপ্রযুক্তি প্রয়োগে নারীর ক্ষমতায়ন বিষয়ে কেন্দ্রীয় পর্যায়ে ২টি ও ৪৪টি জেলায় ১টি করে সর্বমোট ৪৬টি সেমিনার আয়োজন ও প্রচার।<br>
+                    ঘ) ২৫,১২৫ জন নারীকে আইসিটি পেশাজীবী এবং উদ্যোক্তা হিসেবে গড়ে তোলার জন্য একটি একক নারী উদ্যোক্তা প্ল্যাটফরম তৈরি।<br>
+                    ঙ) সরকারি, বেসরকারি বিভিন্ন সংস্থার সাথে পার্টনারশীপ স্থাপন এবং চাকুরী মেলার আয়োজন। 
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item allbt">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">              
+                    প্রকল্পের ফলাফল
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    তথ্য প্রযুক্তি ব্যবহারের মাধ্যমে নারীর দক্ষতা অর্জিত হবে, নতুন কর্মসংস্থান এর সৃষ্টি হবে অর্থাৎ অর্থনৈতিক কর্মকাণ্ডে নারীদের অংশগ্রহণ বৃদ্ধি পাবে। উপজেলা পর্যায়ে আইসিটি সংশ্লিষ্ট বিষয়ে প্রশিক্ষণের মাধ্যমে প্রযুক্তি খাতে দক্ষ নারী কর্মী ও নারী উদ্যোক্তা তৈরি হবে। সরকারি-বেসরকারি সংস্থার সাথে পার্টনারশীপ এর ফলে উপজেলা পর্যায়ের নারীদের প্রশিক্ষণ পরবর্তী কর্মসংস্থান এবং পরামর্শদানের মাধ্যমে টেকসই উন্নয়ন নিশ্চিত হবে। 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- H Details section end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
