--- a/index.html
+++ b/index.html
@@ -635,6 +635,66 @@
         </div>
       </section>
       <!-- H Details section end -->
+      <!-- last card section start -->
+      <section class="sc-2 sc-3">
+        <div class="sc-3sd container mmt">
+          <div class="">
+            <div class="sdd-1 container d-flex justify-content-center">
+              <h3 class="tx text-center fs-6 pt-3 fw-bolder fs-1">প্রকল্প সংশ্লিষ্ট গুরুত্বপূর্ণ ব্যক্তিবর্গ</h3>
+            </div>
+            <div class="lstcard">
+              <div class="row row-cols-1 row-cols-md-5 g-3">
+                <div class="col">
+                  <div class="card ccrrd rounded-bottom h-100">
+                    <div class="pst text-center pt-2">মাননীয় প্রধানমন্ত্রীর <br> আইসিটি বিষয়ক মাননীয় উপদেষ্টা </div>
+                    <img src="Images/joy-sir.jpg" class="card-img-top" alt="...">
+                    <div class="card-body ctx">
+                      <p class="card-text text-center">সজীব ওয়াজেদ জয়</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card ccrrdd rounded-bottom h-100">
+                    <div class="pst text-center pt-2">মাননীয় প্রতিমন্ত্রী</div>
+                    <img src="Images/polok-sir.jpg" class="card-img-top" alt="...">
+                    <div class="card-body ctx">
+                      <p class="card-text text-center">জনাব জুনাইদ আহ্‌মেদ পলক</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card ccrrdd rounded-bottom h-100">
+                    <div class="pst text-center pt-2">সচিব</div>
+                    <img src="Images/secretary.jpg" class="card-img-top" alt="...">
+                    <div class="card-body ctx">
+                      <p class="card-text text-center">জনাব মোঃ সামসুল আরেফিন</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card ccrrdd rounded-bottom h-100">
+                    <div class="pst text-center pt-2">মহাপরিচালক</div>
+                    <img src="Images/dg-sir.jpg" class="card-img-top" alt="...">
+                    <div class="card-body ctx">
+                      <p class="card-text text-center">জনাব মোঃ মোস্তফা কামাল</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card ccrrdd rounded-bottom h-100">
+                    <div class="pst text-center pt-2">প্রকল্প পরিচালক</div>
+                    <img src="Images/pd2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body ctx">
+                      <p class="card-text text-center">মনোয়ারা ইশরাত</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    <!-- last card section end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
