--- a/index.html
+++ b/index.html
@@ -695,6 +695,35 @@
         </div>
       </section>
     <!-- last card section end -->
+    <!-- communication section start -->
+    <section class="sc-2 sc-3">
+      <div class="sc-3sdd container mmt">
+        <div class="">
+          <div class="sdd-1 p-2 container d-flex justify-content-center">
+            <h1 class="tx text-center fs-2  fw-bolder fs-1">যোগাযোগ</h1>
+          </div>
+          <div class="sec-2 d-flex">
+            <div class="cmm mt-3">
+              <div class="alic">
+                <div class="iiccc mt-5">
+                  <img class="mt-3 iicc" src="Images/call.jpg" alt="">
+                </div>
+                <div class="iicc mt-4">
+                  <img src="Images/email.jpg" alt="">
+                </div>
+                <div class="iicc mt-4">
+                  <img src="Images/fb.jpg" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="cm-img">
+              <img src="Images/map.png.jpg" class=" mt-3 ms-3 mb-2" alt="call-center png">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- communication section end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
